Creates color maps independent of the dataset when saving a state file.

--- a/fileops/export/vtk_state.tmpl
+++ b/fileops/export/vtk_state.tmpl
@@ -42,82 +42,85 @@ SetActiveView(renderView1)
 # ----------------------------------------------------------------
 # setup the data processing pipelines
 # ----------------------------------------------------------------
-{% for channel in channels %}
+# 2D transfer function for 'TiffScalars'
+tiffScalarsTF2D = GetTransferFunction2D('TiffScalars')
+tiffScalarsTF2D.ScalarRangeInitialized = 1
+tiffScalarsTF2D.Range = [0.0, 12000, 0.0, 2500]
 
+{% for chk in channels %}
 # create a new 'TIFF Series Reader'
-{{channel.label}}_tiff = TIFFSeriesReader(registrationName='{{channel.label}}.tiff*', FileNames={{channel.tiff_files_list}})
-{{channel.label}}_tiff.ReadAsImageStack = 0
+{{channels[chk].label}}_tiff = TIFFSeriesReader(registrationName='{{channels[chk].label}}.tiff*', FileNames={{channels[chk].tiff_files_list}})
+{{channels[chk].label}}_tiff.ReadAsImageStack = 0
 
 # ----------------------------------------------------------------
 # setup the visualization in view 'renderView1'
 # ----------------------------------------------------------------
-
 # show data from channel
-{{channel.label}}tiffDisplay = Show({{channel.label}}_tiff, renderView1, 'UniformGridRepresentation')
+{{channels[chk].label}}tiffDisplay = Show({{channels[chk].label}}_tiff, renderView1, 'UniformGridRepresentation')
 
-# get 2D transfer function for 'TiffScalars'
-tiffScalarsTF2D = GetTransferFunction2D('TiffScalars')
-tiffScalarsTF2D.ScalarRangeInitialized = 1
-tiffScalarsTF2D.Range = [0.0, 11672.0, 0.0, 2434.9500000000003]
+# get separate color transfer function/color map for 'TiffScalars'
+{{channels[chk].label}}_tiffScalarsLUT = GetColorTransferFunction('TiffScalars', {{channels[chk].label}}tiffDisplay, separate=True)
+{{channels[chk].label}}_tiffScalarsLUT.TransferFunction2D = tiffScalarsTF2D
+{{channels[chk].label}}_tiffScalarsLUT.RGBPoints = {{channels[chk].ctf_rgb_points}}
+{{channels[chk].label}}_tiffScalarsLUT.ScalarRangeInitialized = 1.0
 
-# get color transfer function/color map for 'TiffScalars'
-tiffScalarsLUT = GetColorTransferFunction('TiffScalars')
-tiffScalarsLUT.TransferFunction2D = tiffScalarsTF2D
-tiffScalarsLUT.RGBPoints = {{channel.ctf_rgb_points}}
-tiffScalarsLUT.ScalarRangeInitialized = 1.0
-
-# get opacity transfer function/opacity map for 'TiffScalars'
-tiffScalarsPWF = GetOpacityTransferFunction('TiffScalars')
-tiffScalarsPWF.Points = {{channel.otf_opacity_points}}
-tiffScalarsPWF.ScalarRangeInitialized = 1
+# get separate opacity transfer function/opacity map for 'TiffScalars'
+separate_{{channels[chk].label}}tiffDisplay_TiffScalarsPWF = GetOpacityTransferFunction('TiffScalars', {{channels[chk].label}}tiffDisplay, separate=True)
+separate_{{channels[chk].label}}tiffDisplay_TiffScalarsPWF.Points = {{channels[chk].otf_opacity_points}}
+separate_{{channels[chk].label}}tiffDisplay_TiffScalarsPWF.ScalarRangeInitialized = 1
 
 # trace defaults for the display properties.
-{{channel.label}}tiffDisplay.Representation = 'Volume'
-{{channel.label}}tiffDisplay.ColorArrayName = ['POINTS', 'Tiff Scalars']
-{{channel.label}}tiffDisplay.LookupTable = tiffScalarsLUT
-{{channel.label}}tiffDisplay.SelectTCoordArray = 'None'
-{{channel.label}}tiffDisplay.SelectNormalArray = 'None'
-{{channel.label}}tiffDisplay.SelectTangentArray = 'None'
-{{channel.label}}tiffDisplay.OSPRayScaleArray = 'Tiff Scalars'
-{{channel.label}}tiffDisplay.OSPRayScaleFunction = 'PiecewiseFunction'
-{{channel.label}}tiffDisplay.SelectOrientationVectors = 'None'
-{{channel.label}}tiffDisplay.ScaleFactor = 51.1
-{{channel.label}}tiffDisplay.SelectScaleArray = 'Tiff Scalars'
-{{channel.label}}tiffDisplay.GlyphType = 'Arrow'
-{{channel.label}}tiffDisplay.GlyphTableIndexArray = 'Tiff Scalars'
-{{channel.label}}tiffDisplay.GaussianRadius = 2.555
-{{channel.label}}tiffDisplay.SetScaleArray = ['POINTS', 'Tiff Scalars']
-{{channel.label}}tiffDisplay.ScaleTransferFunction = 'PiecewiseFunction'
-{{channel.label}}tiffDisplay.OpacityArray = ['POINTS', 'Tiff Scalars']
-{{channel.label}}tiffDisplay.OpacityTransferFunction = 'PiecewiseFunction'
-{{channel.label}}tiffDisplay.DataAxesGrid = 'GridAxesRepresentation'
-{{channel.label}}tiffDisplay.PolarAxes = 'PolarAxesRepresentation'
-{{channel.label}}tiffDisplay.ScalarOpacityUnitDistance = 1.9189433079834581
-{{channel.label}}tiffDisplay.ScalarOpacityFunction = tiffScalarsPWF
-{{channel.label}}tiffDisplay.TransferFunction2D = tiffScalarsTF2D
-{{channel.label}}tiffDisplay.OpacityArrayName = ['POINTS', 'Tiff Scalars']
-{{channel.label}}tiffDisplay.ColorArray2Name = ['POINTS', 'Tiff Scalars']
-{{channel.label}}tiffDisplay.IsosurfaceValues = [5836.0]
-{{channel.label}}tiffDisplay.SliceFunction = 'Plane'
-{{channel.label}}tiffDisplay.Slice = 39
-{{channel.label}}tiffDisplay.SelectInputVectors = [None, '']
-{{channel.label}}tiffDisplay.WriteLog = ''
+{{channels[chk].label}}tiffDisplay.Representation = 'Volume'
+{{channels[chk].label}}tiffDisplay.ColorArrayName = ['POINTS', 'Tiff Scalars']
+{{channels[chk].label}}tiffDisplay.LookupTable = {{channels[chk].label}}_tiffScalarsLUT
+{{channels[chk].label}}tiffDisplay.SelectTCoordArray = 'None'
+{{channels[chk].label}}tiffDisplay.SelectNormalArray = 'None'
+{{channels[chk].label}}tiffDisplay.SelectTangentArray = 'None'
+{{channels[chk].label}}tiffDisplay.Scale = [1.0, 1.0, 10.0]
+{{channels[chk].label}}tiffDisplay.OSPRayScaleArray = 'Tiff Scalars'
+{{channels[chk].label}}tiffDisplay.OSPRayScaleFunction = 'PiecewiseFunction'
+{{channels[chk].label}}tiffDisplay.SelectOrientationVectors = 'None'
+{{channels[chk].label}}tiffDisplay.ScaleFactor = 51.1
+{{channels[chk].label}}tiffDisplay.SelectScaleArray = 'Tiff Scalars'
+{{channels[chk].label}}tiffDisplay.GlyphType = 'Arrow'
+{{channels[chk].label}}tiffDisplay.GlyphTableIndexArray = 'Tiff Scalars'
+{{channels[chk].label}}tiffDisplay.GaussianRadius = 2.555
+{{channels[chk].label}}tiffDisplay.SetScaleArray = ['POINTS', 'Tiff Scalars']
+{{channels[chk].label}}tiffDisplay.ScaleTransferFunction = 'PiecewiseFunction'
+{{channels[chk].label}}tiffDisplay.OpacityArray = ['POINTS', 'Tiff Scalars']
+{{channels[chk].label}}tiffDisplay.OpacityTransferFunction = 'PiecewiseFunction'
+{{channels[chk].label}}tiffDisplay.DataAxesGrid = 'GridAxesRepresentation'
+{{channels[chk].label}}tiffDisplay.PolarAxes = 'PolarAxesRepresentation'
+{{channels[chk].label}}tiffDisplay.ScalarOpacityUnitDistance = 1.9189433079834581
+{{channels[chk].label}}tiffDisplay.ScalarOpacityFunction = separate_{{channels[chk].label}}tiffDisplay_TiffScalarsPWF
+{{channels[chk].label}}tiffDisplay.TransferFunction2D = tiffScalarsTF2D
+{{channels[chk].label}}tiffDisplay.OpacityArrayName = ['POINTS', 'Tiff Scalars']
+{{channels[chk].label}}tiffDisplay.ColorArray2Name = ['POINTS', 'Tiff Scalars']
+{{channels[chk].label}}tiffDisplay.IsosurfaceValues = [5836.0]
+{{channels[chk].label}}tiffDisplay.SliceFunction = 'Plane'
+{{channels[chk].label}}tiffDisplay.Slice = 39
+{{channels[chk].label}}tiffDisplay.SelectInputVectors = [None, '']
+{{channels[chk].label}}tiffDisplay.WriteLog = ''
 
 # init the 'PiecewiseFunction' selected for 'ScaleTransferFunction'
-{{channel.label}}tiffDisplay.ScaleTransferFunction.Points = {{channel.scale_transfer_fn}}
+{{channels[chk].label}}tiffDisplay.ScaleTransferFunction.Points = {{channels[chk].scale_transfer_fn}}
 
 # init the 'PiecewiseFunction' selected for 'OpacityTransferFunction'
-{{channel.label}}tiffDisplay.OpacityTransferFunction.Points = {{channel.opacity_transfer_fn}}
+{{channels[chk].label}}tiffDisplay.OpacityTransferFunction.Points = {{channels[chk].opacity_transfer_fn}}
 
 # init the 'Plane' selected for 'SliceFunction'
-{{channel.label}}tiffDisplay.SliceFunction.Origin = [255.5, 255.5, 119.5]
+{{channels[chk].label}}tiffDisplay.SliceFunction.Origin = [255.5, 255.5, 119.5]
+
+# set separate color map
+{{channels[chk].label}}tiffDisplay.UseSeparateColorMap = True
 
 {% if loop.index0==0 %}
 # ----------------------------------------------------------------
 # restore active source
-SetActiveSource({{channel.label}}_tiff)
+SetActiveSource({{channels[chk].label}}_tiff)
 # ----------------------------------------------------------------
 {% endif %}
+# ----------------------------------------------------------------
 {% endfor %}
 
 
